refactor: handle tsoa.ValidateError globally
